# postgres-loic

./: .env  .gitignore  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
