[tool.poetry]
name = "postgres-loic"
version = "0.1.0"
description = "An application that will overload the connection pool of a PostgreSQL deployment"
authors = ["Szymon Mikitiuk <szmiki@softserveinc.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "postgres_loic"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.7.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
